fix: alignment on index and page body text chore: add prismic logo/link

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,7 +25,7 @@
   }
 
    h1.heading_pattern {
-    @apply font-semibold text-xl sm:text-2xl md:text-3xl lg:text-5xl;
+    @apply font-semibold text-xl sm:text-2xl md:text-3xl lg:text-3xl;
   }
 
   h5 {
